mrtk-docs-old/2.4.0/features/Experimental/README.md
---
title: README_MRTK_Documentation
description: Pagina della documentazione introduttiva di MRTK
author: CDiaz-MS
ms.author: cadia
ms.date: 01/12/2021
ms.localizationpriority: medium
keywords: Unity, HoloLens, HoloLens 2, realtà mista, sviluppo, MRTK,
ms.openlocfilehash: 5a377570c52e68f22b3e14750e280b87dd53825a
ms.sourcegitcommit: 59c91f8c70d1ad30995fba6cf862615e25e78d10
ms.translationtype: MT
ms.contentlocale: it-IT
ms.lasthandoff: 03/19/2021
ms.locfileid: "104690908"
---
# <a name="what-is-the-mixed-reality-toolkit"></a><span data-ttu-id="01cdb-104">Che cos'è il Toolkit di realtà mista</span><span class="sxs-lookup"><span data-stu-id="01cdb-104">What is the Mixed Reality Toolkit</span></span>

![Mixed Reality Toolkit](../Images/MRTK_Logo_Rev.png)

<span data-ttu-id="01cdb-106">MRTK-Unity è un progetto gestito da Microsoft che fornisce un set di componenti e funzionalità che consentono di accelerare lo sviluppo di app di realtà mista multipiattaforma in Unity.</span><span class="sxs-lookup"><span data-stu-id="01cdb-106">MRTK-Unity is a Microsoft-driven project that provides a set of components and features, used to accelerate cross-platform MR app development in Unity.</span></span> <span data-ttu-id="01cdb-107">Ecco alcune delle sue funzioni:</span><span class="sxs-lookup"><span data-stu-id="01cdb-107">Here are some of its functions:</span></span>

* <span data-ttu-id="01cdb-108">Fornisce i **blocchi predefiniti di base per lo sviluppo di Unity in HoloLens, realtà mista di Windows e OpenVR**.</span><span class="sxs-lookup"><span data-stu-id="01cdb-108">Provides the **basic building blocks for Unity development on HoloLens, Windows Mixed Reality, and OpenVR**.</span></span>
* <span data-ttu-id="01cdb-109">Consente la **prototipazione rapida** tramite la simulazione in-editor che consente di visualizzare immediatamente le modifiche.</span><span class="sxs-lookup"><span data-stu-id="01cdb-109">Enables **rapid prototyping** via in-editor simulation that allows you to see changes immediately.</span></span>
* <span data-ttu-id="01cdb-110">Opera come **framework estendibile** che offre agli sviluppatori la possibilità di scambiare componenti di base.</span><span class="sxs-lookup"><span data-stu-id="01cdb-110">Operates as an **extensible framework** that provides developers the ability to swap out core components.</span></span>
* <span data-ttu-id="01cdb-111">**Supporta un'ampia gamma di piattaforme**, tra cui</span><span class="sxs-lookup"><span data-stu-id="01cdb-111">**Supports a wide range of platforms**, including</span></span>
  * <span data-ttu-id="01cdb-112">Microsoft HoloLens</span><span class="sxs-lookup"><span data-stu-id="01cdb-112">Microsoft HoloLens</span></span>
  * <span data-ttu-id="01cdb-113">Microsoft HoloLens 2</span><span class="sxs-lookup"><span data-stu-id="01cdb-113">Microsoft HoloLens 2</span></span>
  * <span data-ttu-id="01cdb-114">Visori VR di Windows Mixed Reality</span><span class="sxs-lookup"><span data-stu-id="01cdb-114">Windows Mixed Reality headsets</span></span>
  * <span data-ttu-id="01cdb-115">Visori VR di OpenVR (HTC Vive/Oculus Rift)</span><span class="sxs-lookup"><span data-stu-id="01cdb-115">OpenVR headsets (HTC Vive / Oculus Rift)</span></span>
  * <span data-ttu-id="01cdb-116">Tracciamento della mano Ultraleap</span><span class="sxs-lookup"><span data-stu-id="01cdb-116">Ultraleap Hand Tracking</span></span>

# <a name="getting-started-with-mrtk"></a><span data-ttu-id="01cdb-117">Introduzione a MRTK</span><span class="sxs-lookup"><span data-stu-id="01cdb-117">Getting started with MRTK</span></span>

<span data-ttu-id="01cdb-118">Se non si ha familiarità con MRTK o lo sviluppo di realtà mista in Unity, **è consigliabile iniziare dall'inizio del percorso di** [sviluppo unity](https://docs.microsoft.com/windows/mixed-reality/unity-development-overview?tabs=mrtk%2Chl2) nel Microsoft docs. Il percorso di sviluppo Unity è appositamente progettato per esplorare nuovi sviluppatori tramite l'installazione, i concetti di base e l'uso di MRTK.</span><span class="sxs-lookup"><span data-stu-id="01cdb-118">If you're new to MRTK or Mixed Reality development in Unity, **we recommend you start at the beginning of our** [Unity development journey](https://docs.microsoft.com/windows/mixed-reality/unity-development-overview?tabs=mrtk%2Chl2) in the Microsoft Docs. The Unity development journey is specifically tailored to walk new developers through the installation, core concepts, and usage of MRTK.</span></span>

| <span data-ttu-id="01cdb-119">IMPORTANTE: il percorso di sviluppo di Unity usa attualmente **MRTK versione 2.4.0** e **Unity 2019,4**.</span><span class="sxs-lookup"><span data-stu-id="01cdb-119">IMPORTANT: The Unity development journey currently uses **MRTK version 2.4.0** and **Unity 2019.4**.</span></span> |
| --- |

<span data-ttu-id="01cdb-120">Se si è uno sviluppatore MRTK o di realtà mista, controllare i collegamenti nella sezione successiva per i pacchetti più recenti e le note sulla versione.</span><span class="sxs-lookup"><span data-stu-id="01cdb-120">If you're an experienced Mixed Reality or MRTK developer, check the links in the next section for the newest packages and release notes.</span></span>

# <a name="documentation"></a><span data-ttu-id="01cdb-121">Documentazione</span><span class="sxs-lookup"><span data-stu-id="01cdb-121">Documentation</span></span>

| <span data-ttu-id="01cdb-122">[![Note sulla versione](../Images/MRTK_Icon_ReleaseNotes.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../ReleaseNotes.html)</span><span class="sxs-lookup"><span data-stu-id="01cdb-122">[![Release notes](../Images/MRTK_Icon_ReleaseNotes.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../ReleaseNotes.html)</span></span><br/>[<span data-ttu-id="01cdb-123">Note sulla versione</span><span class="sxs-lookup"><span data-stu-id="01cdb-123">Release Notes</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/../ReleaseNotes.html)| <span data-ttu-id="01cdb-124">[![Panoramica di MRTK](../Images/MRTK_Icon_ArchitectureOverview.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../Architecture/Overview.html)</span><span class="sxs-lookup"><span data-stu-id="01cdb-124">[![MRTK Overview](../Images/MRTK_Icon_ArchitectureOverview.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../Architecture/Overview.html)</span></span><br/>[<span data-ttu-id="01cdb-125">Panoramica di MRTK</span><span class="sxs-lookup"><span data-stu-id="01cdb-125">MRTK Overview</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/../Architecture/Overview.html)| <span data-ttu-id="01cdb-126">[![Guide alle funzionalità](../Images/MRTK_Icon_FeatureGuides.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../README_Button.html)</span><span class="sxs-lookup"><span data-stu-id="01cdb-126">[![Feature Guides](../Images/MRTK_Icon_FeatureGuides.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../README_Button.html)</span></span><br/>[<span data-ttu-id="01cdb-127">Guide alle funzionalità</span><span class="sxs-lookup"><span data-stu-id="01cdb-127">Feature Guides</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/../README_Button.html)| <span data-ttu-id="01cdb-128">[![Riferimento API](../Images/MRTK_Icon_APIReference.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/api/Microsoft.MixedReality.Toolkit.html)</span><span class="sxs-lookup"><span data-stu-id="01cdb-128">[![API Reference](../Images/MRTK_Icon_APIReference.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/api/Microsoft.MixedReality.Toolkit.html)</span></span><br/>[<span data-ttu-id="01cdb-129">Riferimento API</span><span class="sxs-lookup"><span data-stu-id="01cdb-129">API Reference</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/api/Microsoft.MixedReality.Toolkit.html)|
|:---|:---|:---|:---|

# <a name="build-status"></a><span data-ttu-id="01cdb-130">Stato della compilazione</span><span class="sxs-lookup"><span data-stu-id="01cdb-130">Build status</span></span>

| <span data-ttu-id="01cdb-131">Ramo</span><span class="sxs-lookup"><span data-stu-id="01cdb-131">Branch</span></span> | <span data-ttu-id="01cdb-132">Stato CI</span><span class="sxs-lookup"><span data-stu-id="01cdb-132">CI Status</span></span> | <span data-ttu-id="01cdb-133">Stato docs</span><span class="sxs-lookup"><span data-stu-id="01cdb-133">Docs Status</span></span> |
|---|---|---|
| `mrtk_development` |<span data-ttu-id="01cdb-134">[![Stato CI](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_CI?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=15)</span><span class="sxs-lookup"><span data-stu-id="01cdb-134">[![CI Status](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_CI?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=15)</span></span>|<span data-ttu-id="01cdb-135">[![Stato docs](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_docs?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=7)</span><span class="sxs-lookup"><span data-stu-id="01cdb-135">[![Docs Status](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_docs?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=7)</span></span>

# <a name="required-software"></a><span data-ttu-id="01cdb-136">Requisiti software</span><span class="sxs-lookup"><span data-stu-id="01cdb-136">Required software</span></span>

 | <span data-ttu-id="01cdb-137">[ ![ Windows SDK 18362 +](../Images/MRTK170802_Short_17.png)](https://developer.microsoft.com/windows/downloads/windows-10-sdk) [Windows SDK 18362 +](https://developer.microsoft.com/windows/downloads/windows-10-sdk)</span><span class="sxs-lookup"><span data-stu-id="01cdb-137">[![Windows SDK 18362+](../Images/MRTK170802_Short_17.png)](https://developer.microsoft.com/windows/downloads/windows-10-sdk) [Windows SDK 18362+](https://developer.microsoft.com/windows/downloads/windows-10-sdk)</span></span>| <span data-ttu-id="01cdb-138">[ ![ Unity Unity](../Images/MRTK170802_Short_18.png)](https://unity3d.com/get-unity/download/archive) [2018.4. x](https://unity3d.com/get-unity/download/archive)</span><span class="sxs-lookup"><span data-stu-id="01cdb-138">[![Unity](../Images/MRTK170802_Short_18.png)](https://unity3d.com/get-unity/download/archive) [Unity 2018.4.x](https://unity3d.com/get-unity/download/archive)</span></span>| <span data-ttu-id="01cdb-139">Visual [ ![ Studio 2019](../Images/MRTK170802_Short_19.png)](http://dev.windows.com/downloads) [Visual Studio 2019](http://dev.windows.com/downloads)</span><span class="sxs-lookup"><span data-stu-id="01cdb-139">[![Visual Studio 2019](../Images/MRTK170802_Short_19.png)](http://dev.windows.com/downloads) [Visual Studio 2019](http://dev.windows.com/downloads)</span></span>| <span data-ttu-id="01cdb-140">Emulatori [ ![ (facoltativo)](../Images/MRTK170802_Short_20.png)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator) [emulatori (facoltativo)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator)</span><span class="sxs-lookup"><span data-stu-id="01cdb-140">[![Emulators (optional)](../Images/MRTK170802_Short_20.png)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator) [Emulators (optional)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator)</span></span>|
| :--- | :--- | :--- | :--- |
| <span data-ttu-id="01cdb-141">Per compilare app con MRTK V2, è necessario Windows 10 May 2019 Update SDK.</span><span class="sxs-lookup"><span data-stu-id="01cdb-141">To build apps with MRTK v2, you need the Windows 10 May 2019 Update SDK.</span></span> <br> <span data-ttu-id="01cdb-142">Per eseguire app per auricolari immersivi, è necessario Windows 10 Fall Creators Update.</span><span class="sxs-lookup"><span data-stu-id="01cdb-142">To run apps for immersive headsets, you need the Windows 10 Fall Creators Update.</span></span> | <span data-ttu-id="01cdb-143">Il motore di Unity 3D fornisce supporto per la compilazione di progetti di realtà mista in Windows 10</span><span class="sxs-lookup"><span data-stu-id="01cdb-143">The Unity 3D engine provides support for building mixed reality projects in Windows 10</span></span> | <span data-ttu-id="01cdb-144">Visual Studio viene usato per la modifica del codice, la distribuzione e la creazione di pacchetti di app UWP</span><span class="sxs-lookup"><span data-stu-id="01cdb-144">Visual Studio is used for code editing, deploying and building UWP app packages</span></span> | <span data-ttu-id="01cdb-145">Gli emulatori consentono di testare l'app senza il dispositivo in un ambiente simulato</span><span class="sxs-lookup"><span data-stu-id="01cdb-145">The Emulators allow you to test your app without the device in a simulated environment</span></span> |

# <a name="feature-areas"></a><span data-ttu-id="01cdb-146">Aree di funzionalità</span><span class="sxs-lookup"><span data-stu-id="01cdb-146">Feature areas</span></span>

| <span data-ttu-id="01cdb-147">![Sistema di ](../Images/MRTK_Icon_InputSystem.png) [input](../Input/Overview.md) del sistema di input</span><span class="sxs-lookup"><span data-stu-id="01cdb-147">![Input System](../Images/MRTK_Icon_InputSystem.png) [Input System](../Input/Overview.md)</span></span><br/>&nbsp;  | <span data-ttu-id="01cdb-148">![Rilevamento manuale<BR/> (HoloLens 2) ](../Images/MRTK_Icon_HandTracking.png) [rilevamento della mano <br/> (HoloLens 2)](../Input/HandTracking.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-148">![Hand Tracking<br/> (HoloLens 2)](../Images/MRTK_Icon_HandTracking.png) [Hand Tracking<br/> (HoloLens 2)](../Input/HandTracking.md)</span></span> | <span data-ttu-id="01cdb-149">![Eye Tracking<BR/> (HoloLens 2) ](../Images/MRTK_Icon_EyeTracking.png) [Eye Tracking <br/> (HoloLens 2)](../EyeTracking/EyeTracking_Main.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-149">![Eye Tracking<br/> (HoloLens 2)](../Images/MRTK_Icon_EyeTracking.png) [Eye Tracking<br/> (HoloLens 2)](../EyeTracking/EyeTracking_Main.md)</span></span> | <span data-ttu-id="01cdb-150">![Profili ](../Images/MRTK_Icon_Profiles.png) [](../out-of-scope/MixedRealityConfigurationGuide.md) profili</span><span class="sxs-lookup"><span data-stu-id="01cdb-150">![Profiles](../Images/MRTK_Icon_Profiles.png) [Profiles](../out-of-scope/MixedRealityConfigurationGuide.md)</span></span><br/>&nbsp; | <span data-ttu-id="01cdb-151">![Rilevamento manuale<BR/> (Ultraleap) ](../Images/MRTK_Icon_HandTracking.png) [(Ultraleap)](../CrossPlatform/LeapMotionMRTK.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-151">![Hand Tracking<br/> (Ultraleap)](../Images/MRTK_Icon_HandTracking.png) [Hand Tracking (Ultraleap)](../CrossPlatform/LeapMotionMRTK.md)</span></span>|
| :--- | :--- | :--- | :--- | :--- |
| <span data-ttu-id="01cdb-152">![Controlli dell' ](../Images/MRTK_Icon_UIControls.png) [interfaccia](README.md#ux-building-blocks) utente controlli dell'interfaccia utente</span><span class="sxs-lookup"><span data-stu-id="01cdb-152">![UI Controls](../Images/MRTK_Icon_UIControls.png) [UI Controls](README.md#ux-building-blocks)</span></span><br/>&nbsp; | <span data-ttu-id="01cdb-153">![Risolutori dei risolutori ](../Images/MRTK_Icon_Solver.png) [](../README_Solver.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-153">![Solvers](../Images/MRTK_Icon_Solver.png) [Solvers](../README_Solver.md)</span></span><br/>&nbsp; | <span data-ttu-id="01cdb-154">![Multiscena<BR/> Manager per ](../Images/MRTK_Icon_SceneSystem.png) [ <br/> più scene](../SceneSystem/SceneSystemGettingStarted.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-154">![Multi-Scene<br/> Manager](../Images/MRTK_Icon_SceneSystem.png) [Multi-Scene<br/> Manager](../SceneSystem/SceneSystemGettingStarted.md)</span></span> | <span data-ttu-id="01cdb-155">![](../Images/MRTK_Icon_SpatialUnderstanding.png) [ <br/> Conoscenza spaziale](../SpatialAwareness/SpatialAwarenessGettingStarted.md) del<spaziale BR/></span><span class="sxs-lookup"><span data-stu-id="01cdb-155">![Spatial<br/> Awareness](../Images/MRTK_Icon_SpatialUnderstanding.png) [Spatial<br/> Awareness](../SpatialAwareness/SpatialAwarenessGettingStarted.md)</span></span> | <span data-ttu-id="01cdb-156">![](../Images/MRTK_Icon_Diagnostics.png) [ <br/> Strumento di diagnostica](../Diagnostics/DiagnosticsSystemGettingStarted.md)<di diagnostica BR/></span><span class="sxs-lookup"><span data-stu-id="01cdb-156">![Diagnostic<br/> Tool](../Images/MRTK_Icon_Diagnostics.png) [Diagnostic<br/> Tool](../Diagnostics/DiagnosticsSystemGettingStarted.md)</span></span> |
| <span data-ttu-id="01cdb-157">![Shader standard MRTK standard ](../Images/MRTK_Icon_StandardShader.png) [MRTK](../README_MRTKStandardShader.md?q=shader) shader</span><span class="sxs-lookup"><span data-stu-id="01cdb-157">![MRTK Standard Shader](../Images/MRTK_Icon_StandardShader.png) [MRTK Standard Shader](../README_MRTKStandardShader.md?q=shader)</span></span> | <span data-ttu-id="01cdb-158">![Sintesi vocale & dettatura ](../Images/MRTK_Icon_VoiceCommand.png) [](../Input/Speech.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-158">![Speech & Dictation](../Images/MRTK_Icon_VoiceCommand.png) [Speech](../Input/Speech.md)</span></span><br/> <span data-ttu-id="01cdb-159">& [Dettatura](../Input/Dictation.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-159">& [Dictation](../Input/Dictation.md)</span></span> | <span data-ttu-id="01cdb-160">![Limite<](../Images/MRTK_Icon_Boundary.png) [ <br/> sistema di limiti](../Boundary/BoundarySystemGettingStarted.md) di sistema br/></span><span class="sxs-lookup"><span data-stu-id="01cdb-160">![Boundary<br/>System](../Images/MRTK_Icon_Boundary.png) [Boundary<br/>System](../Boundary/BoundarySystemGettingStarted.md)</span></span>| <span data-ttu-id="01cdb-161">![Simulazione nell'editor<BR/>simulazione ](../Images/MRTK_Icon_InputSystem.png) [ <br/> ](../InputSimulation/InputSimulationService.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-161">![In-Editor<br/>Simulation](../Images/MRTK_Icon_InputSystem.png) [In-Editor<br/>Simulation](../InputSimulation/InputSimulationService.md)</span></span> | <span data-ttu-id="01cdb-162">![Funzionalità sperimentali di<BR/>](../Images/MRTK_Icon_Experimental.png) [ <br/> ](../../Contributing/ExperimentalFeatures.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-162">![Experimental<br/>Features](../Images/MRTK_Icon_Experimental.png) [Experimental<br/>Features](../../Contributing/ExperimentalFeatures.md)</span></span>|

# <a name="ux-building-blocks"></a><span data-ttu-id="01cdb-163">Blocchi predefiniti di UX</span><span class="sxs-lookup"><span data-stu-id="01cdb-163">UX building blocks</span></span>

|  <span data-ttu-id="01cdb-164">[Pulsante](../README_Button.md) [ ![ pulsante](../Images/Button/MRTK_Button_Main.png)](../README_Button.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-164">[![Button](../Images/Button/MRTK_Button_Main.png)](../README_Button.md) [Button](../README_Button.md)</span></span> | <span data-ttu-id="01cdb-165">Rettangolo di [delimitazione del](../README_BoundingBox.md) rettangolo di [ ![ delimitazione](../Images/BoundingBox/MRTK_BoundingBox_Main.png)](../README_BoundingBox.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-165">[![Bounding Box](../Images/BoundingBox/MRTK_BoundingBox_Main.png)](../README_BoundingBox.md) [Bounding Box](../README_BoundingBox.md)</span></span> | <span data-ttu-id="01cdb-166">[Manipolatore oggetto](../README_ObjectManipulator.md) [ ![ manipolatore oggetti](../Images/ManipulationHandler/MRTK_Manipulation_Main.png)](../README_ObjectManipulator.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-166">[![Object Manipulator](../Images/ManipulationHandler/MRTK_Manipulation_Main.png)](../README_ObjectManipulator.md) [Object Manipulator](../README_ObjectManipulator.md)</span></span> |
|:--- | :--- | :--- |
| <span data-ttu-id="01cdb-167">Controllo Button che supporta vari metodi di input, tra cui la mano articolata di HoloLens 2</span><span class="sxs-lookup"><span data-stu-id="01cdb-167">A button control which supports various input methods, including HoloLens 2's articulated hand</span></span> | <span data-ttu-id="01cdb-168">Interfaccia utente standard per la modifica di oggetti nello spazio 3D</span><span class="sxs-lookup"><span data-stu-id="01cdb-168">Standard UI for manipulating objects in 3D space</span></span> | <span data-ttu-id="01cdb-169">Script per la modifica di oggetti con una o due mani</span><span class="sxs-lookup"><span data-stu-id="01cdb-169">Script for manipulating objects with one or two hands</span></span> |
|  <span data-ttu-id="01cdb-170">[ ![ Ardesia ardesia](../Images/Slate/MRTK_Slate_Main.png)](../README_Slate.md) [](../README_Slate.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-170">[![Slate](../Images/Slate/MRTK_Slate_Main.png)](../README_Slate.md) [Slate](../README_Slate.md)</span></span> | <span data-ttu-id="01cdb-171">[Tastiera sistema](../README_SystemKeyboard.md) [ ![ tastiera](../Images/SystemKeyboard/MRTK_SystemKeyboard_Main.png)](../README_SystemKeyboard.md) sistema</span><span class="sxs-lookup"><span data-stu-id="01cdb-171">[![System Keyboard](../Images/SystemKeyboard/MRTK_SystemKeyboard_Main.png)](../README_SystemKeyboard.md) [System Keyboard](../README_SystemKeyboard.md)</span></span> | <span data-ttu-id="01cdb-172">[ ![ Interazione](../Images/Interactable/InteractableExamples.png)](../README_Interactable.md) interactabile [](../README_Interactable.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-172">[![Interactable](../Images/Interactable/InteractableExamples.png)](../README_Interactable.md) [Interactable](../README_Interactable.md)</span></span> |
| <span data-ttu-id="01cdb-173">piano di stile 2D che supporta lo scorrimento con l'input della mano articolata</span><span class="sxs-lookup"><span data-stu-id="01cdb-173">2D style plane which supports scrolling with articulated hand input</span></span> | <span data-ttu-id="01cdb-174">Script di esempio di uso della tastiera di sistema in Unity</span><span class="sxs-lookup"><span data-stu-id="01cdb-174">Example script of using the system keyboard in Unity</span></span>  | <span data-ttu-id="01cdb-175">Uno script per rendere gli oggetti interagiscono con gli stati visivi e il supporto dei temi</span><span class="sxs-lookup"><span data-stu-id="01cdb-175">A script for making objects interactable with visual states and theme support</span></span> |
|  <span data-ttu-id="01cdb-176">[Risolutore](../README_Solver.md) [ ![ Risolutore](../Images/Solver/MRTK_Solver_Main.png)](../README_Solver.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-176">[![Solver](../Images/Solver/MRTK_Solver_Main.png)](../README_Solver.md) [Solver](../README_Solver.md)</span></span> | <span data-ttu-id="01cdb-177">[Raccolta oggetti](../README_ObjectCollection.md) [ ![ raccolta oggetti](../Images/ObjectCollection/MRTK_ObjectCollection_Main.jpg)](../README_ObjectCollection.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-177">[![Object Collection](../Images/ObjectCollection/MRTK_ObjectCollection_Main.jpg)](../README_ObjectCollection.md) [Object Collection](../README_ObjectCollection.md)</span></span> | <span data-ttu-id="01cdb-178">[Descrizione comando](../README_Tooltip.md) [ ![ Descrizione comando](../Images/Tooltip/MRTK_Tooltip_Main.png)](../README_Tooltip.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-178">[![Tooltip](../Images/Tooltip/MRTK_Tooltip_Main.png)](../README_Tooltip.md) [Tooltip](../README_Tooltip.md)</span></span> |
| <span data-ttu-id="01cdb-179">Vari comportamenti di posizionamento degli oggetti, ad esempio tag-along, blocco del corpo, dimensioni della visualizzazione costante e magnetismo della superficie</span><span class="sxs-lookup"><span data-stu-id="01cdb-179">Various object positioning behaviors such as tag-along, body-lock, constant view size and surface magnetism</span></span> | <span data-ttu-id="01cdb-180">Script per il layout di una matrice di oggetti in una forma tridimensionale</span><span class="sxs-lookup"><span data-stu-id="01cdb-180">Script for laying out an array of objects in a three-dimensional shape</span></span> | <span data-ttu-id="01cdb-181">Interfaccia utente dell'annotazione con un sistema di ancoraggio/pivot flessibile, che può essere usato per etichettare i controller e gli oggetti di movimento</span><span class="sxs-lookup"><span data-stu-id="01cdb-181">Annotation UI with a flexible anchor/pivot system, which can be used for labeling motion controllers and objects</span></span> |
|  <span data-ttu-id="01cdb-182">[ ![ Dispositivo di](../Images/Slider/MRTK_UX_Slider_Main.jpg)](../README_Sliders.md) [scorrimento](../README_Sliders.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-182">[![Slider](../Images/Slider/MRTK_UX_Slider_Main.jpg)](../README_Sliders.md) [Slider](../README_Sliders.md)</span></span> | <span data-ttu-id="01cdb-183">Shader standard [ ![ MRTK standard](../Images/MRTKStandardShader/MRTK_StandardShader.jpg)](../README_MRTKStandardShader.md) [MRTK](../README_MRTKStandardShader.md) shader</span><span class="sxs-lookup"><span data-stu-id="01cdb-183">[![MRTK Standard Shader](../Images/MRTKStandardShader/MRTK_StandardShader.jpg)](../README_MRTKStandardShader.md) [MRTK Standard Shader](../README_MRTKStandardShader.md)</span></span> | <span data-ttu-id="01cdb-184">[Menu](../README_HandMenu.md) a mano [ ![ menu](../Images/Solver/MRTK_UX_HandMenu.png)](../README_HandMenu.md) a mano</span><span class="sxs-lookup"><span data-stu-id="01cdb-184">[![Hand Menu](../Images/Solver/MRTK_UX_HandMenu.png)](../README_HandMenu.md) [Hand Menu](../README_HandMenu.md)</span></span> |
| <span data-ttu-id="01cdb-185">Interfaccia utente Slider per la regolazione dei valori che supportano l'interazione diretta di rilevamento</span><span class="sxs-lookup"><span data-stu-id="01cdb-185">Slider UI for adjusting values supporting direct hand tracking interaction</span></span> | <span data-ttu-id="01cdb-186">Lo shader standard di MRTK supporta vari elementi di progettazione fluenti con prestazioni</span><span class="sxs-lookup"><span data-stu-id="01cdb-186">MRTK's Standard shader supports various Fluent design elements with performance</span></span> | <span data-ttu-id="01cdb-187">Interfaccia utente bloccata a mano per accedere rapidamente, usando il Risolutore di vincoli Hand</span><span class="sxs-lookup"><span data-stu-id="01cdb-187">Hand-locked UI for quick access, using the Hand Constraint Solver</span></span> |
|  <span data-ttu-id="01cdb-188">[Barra dell'app](../README_AppBar.md) [ ![ barra dell'app](../Images/AppBar/MRTK_AppBar_Main.png)](../README_AppBar.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-188">[![App Bar](../Images/AppBar/MRTK_AppBar_Main.png)](../README_AppBar.md) [App Bar](../README_AppBar.md)</span></span> | <span data-ttu-id="01cdb-189">[ ![ Puntatori puntatori](../Images/Pointers/MRTK_Pointer_Main.png)](../Input/Pointers.md) [](../Input/Pointers.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-189">[![Pointers](../Images/Pointers/MRTK_Pointer_Main.png)](../Input/Pointers.md) [Pointers](../Input/Pointers.md)</span></span> | <span data-ttu-id="01cdb-190">[Visualizzazione a portata](../README_FingertipVisualization.md) di mano [ ![ visualizzazione a mano](../Images/Fingertip/MRTK_FingertipVisualization_Main.png)](../README_FingertipVisualization.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-190">[![Fingertip Visualization](../Images/Fingertip/MRTK_FingertipVisualization_Main.png)](../README_FingertipVisualization.md) [Fingertip Visualization](../README_FingertipVisualization.md)</span></span> |
| <span data-ttu-id="01cdb-191">Interfaccia utente per l'attivazione manuale del riquadro delimitatore</span><span class="sxs-lookup"><span data-stu-id="01cdb-191">UI for Bounding Box's manual activation</span></span> | <span data-ttu-id="01cdb-192">Informazioni sui diversi tipi di puntatori</span><span class="sxs-lookup"><span data-stu-id="01cdb-192">Learn about various types of pointers</span></span> | <span data-ttu-id="01cdb-193">Offerta visiva a portata di mano che migliora la confidenza per l'interazione diretta</span><span class="sxs-lookup"><span data-stu-id="01cdb-193">Visual affordance on the fingertip which improves the confidence for the direct interaction</span></span> |
|  <span data-ttu-id="01cdb-194">[Menu](../README_NearMenu.md) vicino a [ ![ menu vicino](../Images/NearMenu/MRTK_UX_NearMenu.png)](../README_NearMenu.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-194">[![Near Menu](../Images/NearMenu/MRTK_UX_NearMenu.png)](../README_NearMenu.md) [Near Menu](../README_NearMenu.md)</span></span> | <span data-ttu-id="01cdb-195">[ ![ ](../Images/SpatialAwareness/MRTK_SpatialAwareness_Main.png)](../SpatialAwareness/SpatialAwarenessGettingStarted.md) [Consapevolezza](../SpatialAwareness/SpatialAwarenessGettingStarted.md) spaziale</span><span class="sxs-lookup"><span data-stu-id="01cdb-195">[![Spatial Awareness](../Images/SpatialAwareness/MRTK_SpatialAwareness_Main.png)](../SpatialAwareness/SpatialAwarenessGettingStarted.md) [Spatial Awareness](../SpatialAwareness/SpatialAwarenessGettingStarted.md)</span></span> | <span data-ttu-id="01cdb-196">Dettatura del [comando](../Input/Speech.md)Voice del [ ![ comando](../Images/Input/MRTK_Input_Speech.png)](../Input/Speech.md) Voice  /  [](../Input/Dictation.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-196">[![Voice Command](../Images/Input/MRTK_Input_Speech.png)](../Input/Speech.md) [Voice Command](../Input/Speech.md) / [Dictation](../Input/Dictation.md)</span></span> |
| <span data-ttu-id="01cdb-197">Interfaccia utente dei menu a virgola mobile per le interazioni near</span><span class="sxs-lookup"><span data-stu-id="01cdb-197">Floating menu UI for the near interactions</span></span> | <span data-ttu-id="01cdb-198">Fare in modo che gli oggetti olografici interagiscano con gli ambienti fisici</span><span class="sxs-lookup"><span data-stu-id="01cdb-198">Make your holographic objects interact with the physical environments</span></span> | <span data-ttu-id="01cdb-199">Script ed esempi per l'integrazione dell'input vocale</span><span class="sxs-lookup"><span data-stu-id="01cdb-199">Scripts and examples for integrating speech input</span></span> |
|  <span data-ttu-id="01cdb-200">[Indicatore di stato](../README_ProgressIndicator.md) [ ![ indicatore di stato](../Images/ProgressIndicator/MRTK_ProgressIndicator_Main.png)](../README_ProgressIndicator.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-200">[![Progress Indicator](../Images/ProgressIndicator/MRTK_ProgressIndicator_Main.png)](../README_ProgressIndicator.md) [Progress Indicator](../README_ProgressIndicator.md)</span></span> | <span data-ttu-id="01cdb-201">Finestra di [ ![ dialogo](../Images/Dialog/MRTK_UX_Dialog_Main.png)](Dialog/README_Dialog.md) [[sperimentale]](Dialog/README_Dialog.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-201">[![Dialog](../Images/Dialog/MRTK_UX_Dialog_Main.png)](Dialog/README_Dialog.md) [Dialog [Experimental]](Dialog/README_Dialog.md)</span></span> | <span data-ttu-id="01cdb-202">[ ![ Coach Hand Coach](../Images/HandCoach/MRTK_UX_HandCoach_Main.jpg)](HandCoach/README_HandCoach.md) [[sperimentale]](HandCoach/README_HandCoach.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-202">[![Hand Coach](../Images/HandCoach/MRTK_UX_HandCoach_Main.jpg)](HandCoach/README_HandCoach.md) [Hand Coach [Experimental]](HandCoach/README_HandCoach.md)</span></span> |
| <span data-ttu-id="01cdb-203">Indicatore visivo per la comunicazione del processo o dell'operazione dati</span><span class="sxs-lookup"><span data-stu-id="01cdb-203">Visual indicator for communicating data process or operation</span></span> | <span data-ttu-id="01cdb-204">INTERFACCIA utente per la richiesta di conferma o riconoscimento da un utente</span><span class="sxs-lookup"><span data-stu-id="01cdb-204">UI for asking for user's confirmation or acknowledgement</span></span>  | <span data-ttu-id="01cdb-205">Componente che consente di guidare l'utente quando il movimento non è stato insegnato</span><span class="sxs-lookup"><span data-stu-id="01cdb-205">Component that helps guide the user when the gesture has not been taught</span></span> |
|  <span data-ttu-id="01cdb-206">Servizio fisica della mano del [ ![ servizio](../Images/HandPhysics/MRTK_UX_HandPhysics_Main.jpg)](HandPhysicsService/README.md) fisica della mano [[sperimentale]](HandPhysicsService/README.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-206">[![Hand Physics Service](../Images/HandPhysics/MRTK_UX_HandPhysics_Main.jpg)](HandPhysicsService/README.md) [Hand Physics Service [Experimental]](HandPhysicsService/README.md)</span></span> | <span data-ttu-id="01cdb-207">[ ![ Scorrimento](../Images/ScrollingCollection/MRTK_UX_ScrollingCollection_Main.jpg)](ScrollingObjectCollection/README.md) raccolta scorrevole raccolta [[sperimentale]](ScrollingObjectCollection/README.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-207">[![Scrolling Collection](../Images/ScrollingCollection/MRTK_UX_ScrollingCollection_Main.jpg)](ScrollingObjectCollection/README.md) [Scrolling Collection [Experimental]](ScrollingObjectCollection/README.md)</span></span> | <span data-ttu-id="01cdb-208">[ ![ Dock Dock](../Images/Dock/MRTK_UX_Dock_Main.png)](Dock/README_Dock.md) [[sperimentale]](Dock/README_Dock.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-208">[![Dock](../Images/Dock/MRTK_UX_Dock_Main.png)](Dock/README_Dock.md) [Dock [Experimental]](Dock/README_Dock.md)</span></span> |
| <span data-ttu-id="01cdb-209">Il servizio di fisica della mano Abilita eventi di collisione del corpo rigidi e interazioni con le mani articolate</span><span class="sxs-lookup"><span data-stu-id="01cdb-209">The hand physics service enables rigid body collision events and interactions with articulated hands</span></span> | <span data-ttu-id="01cdb-210">Raccolta di oggetti che scorre in modo nativo gli oggetti 3D</span><span class="sxs-lookup"><span data-stu-id="01cdb-210">An Object Collection that natively scrolls 3D objects</span></span> | <span data-ttu-id="01cdb-211">Il Dock consente lo spostamento di oggetti all'interno e all'esterno di posizioni predeterminate</span><span class="sxs-lookup"><span data-stu-id="01cdb-211">The Dock allows objects to be moved in and out of predetermined positions</span></span> |
|  <span data-ttu-id="01cdb-212">[ ![ Rilevamento degli occhi: rilevamento occhi selezione destinazione](../Images/EyeTracking/mrtk_et_targetselect.png)](../EyeTracking/EyeTracking_TargetSelection.md) [: selezione destinazione](../EyeTracking/EyeTracking_TargetSelection.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-212">[![Eye Tracking: Target Selection](../Images/EyeTracking/mrtk_et_targetselect.png)](../EyeTracking/EyeTracking_TargetSelection.md) [Eye Tracking: Target Selection](../EyeTracking/EyeTracking_TargetSelection.md)</span></span> | <span data-ttu-id="01cdb-213">[ ![ Rilevamento degli occhi:](../Images/EyeTracking/mrtk_et_navigation.png)](../EyeTracking/EyeTracking_Navigation.md) esplorazione [degli occhi: navigazione](../EyeTracking/EyeTracking_Navigation.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-213">[![Eye Tracking: Navigation](../Images/EyeTracking/mrtk_et_navigation.png)](../EyeTracking/EyeTracking_Navigation.md) [Eye Tracking: Navigation](../EyeTracking/EyeTracking_Navigation.md)</span></span> | <span data-ttu-id="01cdb-214">[ ![ Verifica degli occhi:](../Images/EyeTracking/mrtk_et_heatmaps.png)](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention) [monitoraggio degli occhi della mappa termica: mappa termica](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention)</span><span class="sxs-lookup"><span data-stu-id="01cdb-214">[![Eye Tracking: Heat Map](../Images/EyeTracking/mrtk_et_heatmaps.png)](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention) [Eye Tracking: Heat Map](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention)</span></span> |
| <span data-ttu-id="01cdb-215">Combina gli occhi, l'input voce e la mano per selezionare gli ologrammi in modo rapido e semplice nella tua scena</span><span class="sxs-lookup"><span data-stu-id="01cdb-215">Combine eyes, voice and hand input to quickly and effortlessly select holograms across your scene</span></span> | <span data-ttu-id="01cdb-216">Informazioni su come scorrere automaticamente il testo o ingrandire in modo scorrevole il contenuto con lo stato attivo in base a ciò che si sta esaminando</span><span class="sxs-lookup"><span data-stu-id="01cdb-216">Learn how to auto-scroll text or fluently zoom into focused content based on what you are looking at</span></span> | <span data-ttu-id="01cdb-217">Esempi per la registrazione, il caricamento e la visualizzazione delle informazioni visualizzate dall'utente nell'app</span><span class="sxs-lookup"><span data-stu-id="01cdb-217">Examples for logging, loading and visualizing what users have been looking at in your app</span></span> |

# <a name="tools"></a><span data-ttu-id="01cdb-218">Strumenti</span><span class="sxs-lookup"><span data-stu-id="01cdb-218">Tools</span></span>

|  <span data-ttu-id="01cdb-219">[ ![ Ottimizza](../Images/MRTK_Icon_OptimizeWindow.png)](../Tools/OptimizeWindow.md) [finestra ottimizza](../Tools/OptimizeWindow.md) finestra</span><span class="sxs-lookup"><span data-stu-id="01cdb-219">[![Optimize Window](../Images/MRTK_Icon_OptimizeWindow.png)](../Tools/OptimizeWindow.md) [Optimize Window](../Tools/OptimizeWindow.md)</span></span> | <span data-ttu-id="01cdb-220">[Finestra dipendenza](../Tools/DependencyWindow.md) [ ![ finestra](../Images/MRTK_Icon_DependencyWindow.png)](../Tools/DependencyWindow.md) dipendenze</span><span class="sxs-lookup"><span data-stu-id="01cdb-220">[![Dependency Window](../Images/MRTK_Icon_DependencyWindow.png)](../Tools/DependencyWindow.md) [Dependency Window](../Tools/DependencyWindow.md)</span></span> | ![Finestra di compilazione](../Images/MRTK_Icon_BuildWindow.png) <span data-ttu-id="01cdb-222">Finestra di compilazione</span><span class="sxs-lookup"><span data-stu-id="01cdb-222">Build Window</span></span> | <span data-ttu-id="01cdb-223">[Registrazione](../InputSimulation/InputAnimationRecording.md) input [ ![ registrazione](../Images/MRTK_Icon_InputRecording.png)](../InputSimulation/InputAnimationRecording.md) input</span><span class="sxs-lookup"><span data-stu-id="01cdb-223">[![Input recording](../Images/MRTK_Icon_InputRecording.png)](../InputSimulation/InputAnimationRecording.md) [Input recording](../InputSimulation/InputAnimationRecording.md)</span></span> |
|:--- | :--- | :--- | :--- |
| <span data-ttu-id="01cdb-224">Automatizzare la configurazione dei progetti di realtà mista per le ottimizzazioni delle prestazioni</span><span class="sxs-lookup"><span data-stu-id="01cdb-224">Automate configuration of Mixed Reality projects for performance optimizations</span></span> | <span data-ttu-id="01cdb-225">Analizzare le dipendenze tra le risorse e identificare le risorse inutilizzate</span><span class="sxs-lookup"><span data-stu-id="01cdb-225">Analyze dependencies between assets and identify unused assets</span></span> |  <span data-ttu-id="01cdb-226">Configurare ed eseguire un processo di compilazione end-to-end per applicazioni di realtà miste</span><span class="sxs-lookup"><span data-stu-id="01cdb-226">Configure and execute an end-to-end build process for Mixed Reality applications</span></span> | <span data-ttu-id="01cdb-227">Registrare e riprodurre i dati del movimento Head e del rilevamento della mano nell'editor</span><span class="sxs-lookup"><span data-stu-id="01cdb-227">Record and playback head movement and hand tracking data in editor</span></span> |

# <a name="example-scenes"></a><span data-ttu-id="01cdb-228">Scene di esempio</span><span class="sxs-lookup"><span data-stu-id="01cdb-228">Example scenes</span></span>

<span data-ttu-id="01cdb-229">Esplorare i diversi tipi di interazioni e i controlli dell'interfaccia utente di MRTK in [questa scena di esempio](../README_HandInteractionExamples.md).</span><span class="sxs-lookup"><span data-stu-id="01cdb-229">Explore MRTK's various types of interactions and UI controls in [this example scene](../README_HandInteractionExamples.md).</span></span>

<span data-ttu-id="01cdb-230">È possibile trovare altre scene di esempio nella cartella [**assets/MixedRealityToolkit. examples/Demos**](/Assets/MixedRealityToolkit.Examples/Demos) .</span><span class="sxs-lookup"><span data-stu-id="01cdb-230">You can find  other example scenes under [**Assets/MixedRealityToolkit.Examples/Demos**](/Assets/MixedRealityToolkit.Examples/Demos) folder.</span></span>

<span data-ttu-id="01cdb-231">[![Scena di esempio](../Images/MRTK_Examples.png)](../README_HandInteractionExamples.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-231">[![Example Scene](../Images/MRTK_Examples.png)](../README_HandInteractionExamples.md)</span></span>

# <a name="mrtk-examples-hub"></a><span data-ttu-id="01cdb-232">Hub esempi MRTK</span><span class="sxs-lookup"><span data-stu-id="01cdb-232">MRTK examples hub</span></span>

<span data-ttu-id="01cdb-233">Con l'hub esempi di MRTK è possibile provare diverse scene di esempio in MRTK.</span><span class="sxs-lookup"><span data-stu-id="01cdb-233">With the MRTK Examples Hub, you can try various example scenes in MRTK.</span></span>
<span data-ttu-id="01cdb-234">È possibile trovare i pacchetti dell'app predefiniti per HoloLens (x86), HoloLens 2 (ARM) e gli auricolari immersivi a realtà mista di Windows (x64) nella cartella [**asset di versione**](https://github.com/microsoft/MixedRealityToolkit-Unity/releases/tag/v2.0.0) .</span><span class="sxs-lookup"><span data-stu-id="01cdb-234">You can find pre-built app packages for HoloLens(x86), HoloLens 2(ARM), and Windows Mixed Reality immersive headsets(x64) under [**Release Assets**](https://github.com/microsoft/MixedRealityToolkit-Unity/releases/tag/v2.0.0) folder.</span></span> <span data-ttu-id="01cdb-235">[Usare il portale per dispositivi Windows per installare le app in HoloLens](https://docs.microsoft.com/hololens/hololens-install-apps#use-the-windows-device-portal-to-install-apps-on-hololens).</span><span class="sxs-lookup"><span data-stu-id="01cdb-235">[Use the Windows Device Portal to install apps on HoloLens](https://docs.microsoft.com/hololens/hololens-install-apps#use-the-windows-device-portal-to-install-apps-on-hololens).</span></span>

<span data-ttu-id="01cdb-236">Vedere la [pagina del file Leggimi dell'hub esempi](../README_ExampleHub.md) per informazioni dettagliate sulla creazione di un hub a più scene con il sistema di scena di MRTK e il servizio di transizione della scena.</span><span class="sxs-lookup"><span data-stu-id="01cdb-236">See [Examples Hub README page](../README_ExampleHub.md) to learn about the details on creating a multi-scene hub with MRTK's scene system and scene transition service.</span></span>

<span data-ttu-id="01cdb-237">[![Scena di esempio](../Images/MRTK_ExamplesHub.png)](../README_HandInteractionExamples.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-237">[![Example Scene](../Images/MRTK_ExamplesHub.png)](../README_HandInteractionExamples.md)</span></span>

# <a name="sample-apps-made-with-mrtk"></a><span data-ttu-id="01cdb-238">App di esempio create con MRTK</span><span class="sxs-lookup"><span data-stu-id="01cdb-238">Sample apps made with MRTK</span></span>

| <span data-ttu-id="01cdb-239">[![Tavola periodica degli elementi](../Images/MRDL_PeriodicTable.jpg)](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span><span class="sxs-lookup"><span data-stu-id="01cdb-239">[![Periodic Table of the Elements](../Images/MRDL_PeriodicTable.jpg)](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span></span>| <span data-ttu-id="01cdb-240">[![Galaxy Explorer](../Images/MRTK_GalaxyExplorer.jpg)](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span><span class="sxs-lookup"><span data-stu-id="01cdb-240">[![Galaxy Explorer](../Images/MRTK_GalaxyExplorer.jpg)](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span></span>|
|:--- | :--- |
| <span data-ttu-id="01cdb-241">[La tabella periodica degli elementi](https://github.com/Microsoft/MRDL_Unity_PeriodicTable) è un'app di esempio Open source che illustra come usare il sistema di input e i blocchi predefiniti di MRTK per creare un'esperienza di app per HoloLens e auricolari immersivi.</span><span class="sxs-lookup"><span data-stu-id="01cdb-241">[Periodic Table of the Elements](https://github.com/Microsoft/MRDL_Unity_PeriodicTable) is an open-source sample app which demonstrates how to use MRTK's input system and building blocks to create an app experience for HoloLens and Immersive headsets.</span></span> <span data-ttu-id="01cdb-242">Leggere la storia di porting: [portare la tabella periodica dell'app elementi a HoloLens 2 con MRTK V2](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span><span class="sxs-lookup"><span data-stu-id="01cdb-242">Read the porting story: [Bringing the Periodic Table of the Elements app to HoloLens 2 with MRTK v2](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span></span> |<span data-ttu-id="01cdb-243">[Galaxy Explorer](https://github.com/Microsoft/GalaxyExplorer) è un'app di esempio Open source che è stata sviluppata in origine nel 2016 marzo come parte della campagna HoloLens ' Condividi la tua idea '.</span><span class="sxs-lookup"><span data-stu-id="01cdb-243">[Galaxy Explorer](https://github.com/Microsoft/GalaxyExplorer) is an open-source sample app that was originally developed in March 2016 as part of the HoloLens 'Share Your Idea' campaign.</span></span> <span data-ttu-id="01cdb-244">Galaxy Explorer è stato aggiornato con nuove funzionalità per HoloLens 2, usando MRTK V2.</span><span class="sxs-lookup"><span data-stu-id="01cdb-244">Galaxy Explorer has been updated with new features for HoloLens 2, using MRTK v2.</span></span> <span data-ttu-id="01cdb-245">Leggi la storia: [creazione di Galaxy Explorer per HoloLens 2](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span><span class="sxs-lookup"><span data-stu-id="01cdb-245">Read the story: [The Making of Galaxy Explorer for HoloLens 2](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span></span>|

# <a name="engage-with-the-community"></a><span data-ttu-id="01cdb-246">Interagisci con la community</span><span class="sxs-lookup"><span data-stu-id="01cdb-246">Engage with the community</span></span>

* <span data-ttu-id="01cdb-247">Unisciti alla conversazione intorno a MRTK in [Slack](https://holodevelopers.slack.com/).</span><span class="sxs-lookup"><span data-stu-id="01cdb-247">Join the conversation around MRTK on [Slack](https://holodevelopers.slack.com/).</span></span> <span data-ttu-id="01cdb-248">È possibile partecipare alla community di Slack tramite il [mittente dell'invito automatico](https://holodevelopersslack.azurewebsites.net/).</span><span class="sxs-lookup"><span data-stu-id="01cdb-248">You can join the Slack community via the [automatic invitation sender](https://holodevelopersslack.azurewebsites.net/).</span></span>

* <span data-ttu-id="01cdb-249">Porre domande sull'uso di MRTK in [stack overflow](https://stackoverflow.com/questions/tagged/mrtk) usando il tag **MRTK** .</span><span class="sxs-lookup"><span data-stu-id="01cdb-249">Ask questions about using MRTK on [Stack Overflow](https://stackoverflow.com/questions/tagged/mrtk) using the **MRTK** tag.</span></span>

* <span data-ttu-id="01cdb-250">È possibile cercare [problemi noti](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) o archiviare un [nuovo problema](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) se si riscontra un problema nel codice MRTK.</span><span class="sxs-lookup"><span data-stu-id="01cdb-250">Search for [known issues](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) or file a [new issue](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) if you find something broken in MRTK code.</span></span>

* <span data-ttu-id="01cdb-251">Per domande su come contribuire a MRTK, vedere il canale [mixed-reality-Toolkit](https://holodevelopers.slack.com/messages/C2H4HT858) in slack.</span><span class="sxs-lookup"><span data-stu-id="01cdb-251">For questions about contributing to MRTK, go to the [mixed-reality-toolkit](https://holodevelopers.slack.com/messages/C2H4HT858) channel on slack.</span></span>

<span data-ttu-id="01cdb-252">Questo progetto ha adottato il [Codice di comportamento di Microsoft per l'open source](https://opensource.microsoft.com/codeofconduct/).</span><span class="sxs-lookup"><span data-stu-id="01cdb-252">This project has adopted the [Microsoft Open Source Code of Conduct](https://opensource.microsoft.com/codeofconduct/).</span></span>
<span data-ttu-id="01cdb-253">Per altre informazioni, vedere le [Domande frequenti sul codice di comportamento](https://opensource.microsoft.com/codeofconduct/faq/) o scrivere a [opencode@microsoft.com](mailto:opencode@microsoft.com) per domande aggiuntive o commenti.</span><span class="sxs-lookup"><span data-stu-id="01cdb-253">For more information, see the [Code of Conduct FAQ](https://opensource.microsoft.com/codeofconduct/faq/) or contact [opencode@microsoft.com](mailto:opencode@microsoft.com) with any additional questions or comments.</span></span>

# <a name="useful-resources-on-the-mixed-reality-dev-center"></a><span data-ttu-id="01cdb-254">Risorse utili per la realtà mista Dev Center</span><span class="sxs-lookup"><span data-stu-id="01cdb-254">Useful resources on the Mixed Reality Dev Center</span></span>

| <span data-ttu-id="01cdb-255">![Individua ](../Images/mrdevcenter/icon-discover.png) [individua](https://docs.microsoft.com/windows/mixed-reality/)</span><span class="sxs-lookup"><span data-stu-id="01cdb-255">![Discover](../Images/mrdevcenter/icon-discover.png) [Discover](https://docs.microsoft.com/windows/mixed-reality/)</span></span>| <span data-ttu-id="01cdb-256">![Progettazione ](../Images/mrdevcenter/icon-design.png) [](https://docs.microsoft.com/windows/mixed-reality/design) progettazione</span><span class="sxs-lookup"><span data-stu-id="01cdb-256">![Design](../Images/mrdevcenter/icon-design.png) [Design](https://docs.microsoft.com/windows/mixed-reality/design)</span></span>| <span data-ttu-id="01cdb-257">![Sviluppare ](../Images/mrdevcenter/icon-develop.png) [](https://docs.microsoft.com/windows/mixed-reality/development) lo sviluppo</span><span class="sxs-lookup"><span data-stu-id="01cdb-257">![Develop](../Images/mrdevcenter/icon-develop.png) [Develop](https://docs.microsoft.com/windows/mixed-reality/development)</span></span>| <span data-ttu-id="01cdb-258">![Distribuisci) ](../Images/mrdevcenter/icon-distribute.png) [Distribuisci](https://docs.microsoft.com/windows/mixed-reality/implementing-3d-app-launchers)</span><span class="sxs-lookup"><span data-stu-id="01cdb-258">![Distribute)](../Images/mrdevcenter/icon-distribute.png) [Distribute](https://docs.microsoft.com/windows/mixed-reality/implementing-3d-app-launchers)</span></span>|
| :--------------------- | :----------------- | :------------------ | :------------------------ |
| <span data-ttu-id="01cdb-259">Scopri come creare esperienze di realtà miste per HoloLens e auricolari immersivi (VR).</span><span class="sxs-lookup"><span data-stu-id="01cdb-259">Learn to build mixed reality experiences for HoloLens and immersive headsets (VR).</span></span>          | <span data-ttu-id="01cdb-260">Ottenere le guide di progettazione.</span><span class="sxs-lookup"><span data-stu-id="01cdb-260">Get design guides.</span></span> <span data-ttu-id="01cdb-261">Interfaccia utente di compilazione.</span><span class="sxs-lookup"><span data-stu-id="01cdb-261">Build user interface.</span></span> <span data-ttu-id="01cdb-262">Informazioni sulle interazioni e sull'input.</span><span class="sxs-lookup"><span data-stu-id="01cdb-262">Learn interactions and input.</span></span>     | <span data-ttu-id="01cdb-263">Ottenere le guide di sviluppo.</span><span class="sxs-lookup"><span data-stu-id="01cdb-263">Get development guides.</span></span> <span data-ttu-id="01cdb-264">Scopri la tecnologia.</span><span class="sxs-lookup"><span data-stu-id="01cdb-264">Learn the technology.</span></span> <span data-ttu-id="01cdb-265">Comprendere la scienza.</span><span class="sxs-lookup"><span data-stu-id="01cdb-265">Understand the science.</span></span>       | <span data-ttu-id="01cdb-266">Preparare l'app per gli utenti e valutare la possibilità di creare un'utilità di avvio 3D.</span><span class="sxs-lookup"><span data-stu-id="01cdb-266">Get your app ready for others and consider creating a 3D launcher.</span></span> |

# <a name="useful-resources-on-azure"></a><span data-ttu-id="01cdb-267">Risorse utili in Azure</span><span class="sxs-lookup"><span data-stu-id="01cdb-267">Useful resources on Azure</span></span>

| <span data-ttu-id="01cdb-268">![Ancoraggi nello spazio](../Images/mrdevcenter/icon-azurespatialanchors.png)</span><span class="sxs-lookup"><span data-stu-id="01cdb-268">![Spatial Anchors](../Images/mrdevcenter/icon-azurespatialanchors.png)</span></span><br> [<span data-ttu-id="01cdb-269">Ancoraggi nello spazio</span><span class="sxs-lookup"><span data-stu-id="01cdb-269">Spatial Anchors</span></span>](https://docs.microsoft.com/azure/spatial-anchors/)| <span data-ttu-id="01cdb-270">![Servizi di riconoscimento vocale](../Images/mrdevcenter/icon-azurespeechservices.png) [Servizi di riconoscimento vocale](https://docs.microsoft.com/azure/cognitive-services/speech-service/)</span><span class="sxs-lookup"><span data-stu-id="01cdb-270">![Speech Services](../Images/mrdevcenter/icon-azurespeechservices.png) [Speech Services](https://docs.microsoft.com/azure/cognitive-services/speech-service/)</span></span>| <span data-ttu-id="01cdb-271">![Servizi visioni Vision Services ](../Images/mrdevcenter/icon-azurevisionservices.png) [](https://docs.microsoft.com/azure/cognitive-services/computer-vision/)</span><span class="sxs-lookup"><span data-stu-id="01cdb-271">![Vision Services](../Images/mrdevcenter/icon-azurevisionservices.png) [Vision Services](https://docs.microsoft.com/azure/cognitive-services/computer-vision/)</span></span>|
| :------------------------| :--------------------- | :---------------------- |
| <span data-ttu-id="01cdb-272">Gli ancoraggi spaziali sono un servizio multipiattaforma che consente di creare esperienze di realtà miste usando oggetti che rendono permanente la loro posizione tra i dispositivi nel tempo.</span><span class="sxs-lookup"><span data-stu-id="01cdb-272">Spatial Anchors is a cross-platform service that allows you to create Mixed Reality experiences using objects that persist their location across devices over time.</span></span>| <span data-ttu-id="01cdb-273">Individuare e integrare nell'applicazione le funzionalità vocali di Azure, come il riconoscimento vocale, il riconoscimento del parlante o la traduzione vocale.</span><span class="sxs-lookup"><span data-stu-id="01cdb-273">Discover and integrate Azure powered speech capabilities like speech to text, speaker recognition or speech translation into your application.</span></span>| <span data-ttu-id="01cdb-274">Identificare e analizzare il contenuto di immagini o video con i servizi di visione artificiale come il rilevamento dei volti, il riconoscimento delle emozioni o Video Indexer.</span><span class="sxs-lookup"><span data-stu-id="01cdb-274">Identify and analyze your image or video content using Vision Services like computer vision, face detection, emotion recognition or video indexer.</span></span> |

# <a name="learn-more-about-the-mrtk-project"></a><span data-ttu-id="01cdb-275">Altre informazioni sul progetto MRTK</span><span class="sxs-lookup"><span data-stu-id="01cdb-275">Learn more about the MRTK project</span></span>

<span data-ttu-id="01cdb-276">Il materiale di pianificazione è reperibile nel [wiki](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki) nella sezione relativa alla gestione del progetto.</span><span class="sxs-lookup"><span data-stu-id="01cdb-276">You can find our planning material on [our wiki](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki) under the Project Management Section.</span></span> <span data-ttu-id="01cdb-277">È sempre possibile visualizzare gli elementi su cui il team sta lavorando attivamente nel problema relativo al piano di iterazione.</span><span class="sxs-lookup"><span data-stu-id="01cdb-277">You can always see the items the team is actively working on in the Iteration Plan issue.</span></span>

# <a name="how-to-contribute"></a><span data-ttu-id="01cdb-278">Come contribuire</span><span class="sxs-lookup"><span data-stu-id="01cdb-278">How to contribute</span></span>

<span data-ttu-id="01cdb-279">Scopri come [contribuire a MRTK per contribuire.](../../Contributing/CONTRIBUTING.md)</span><span class="sxs-lookup"><span data-stu-id="01cdb-279">Learn how you can contribute to MRTK at [Contributing](../../Contributing/CONTRIBUTING.md).</span></span>

<span data-ttu-id="01cdb-280">**Per informazioni dettagliate sui diversi rami usati nei repository del Toolkit di realtà mista, vedere questa [Guida di Branch](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki/Branch-Guide).**</span><span class="sxs-lookup"><span data-stu-id="01cdb-280">**For details on the different branches used in the Mixed Reality Toolkit repositories, check this [Branch Guide here](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki/Branch-Guide).**</span></span>
